prod-croatia-configuration-main@537e45c9b4c/overlays/prod-nonpci-appdb/camunda-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: camunda-rules-external
  namespace: camunda
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["alpha", "alpha-eit"]
      to:
        - operation:
            ports: ["80","26500"]
