prod-croatia-configuration-main@537e45c9b4c/overlays/prod-nonpci-appdb/redis-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: redis-rules-external
  namespace: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["alpha", "alpha-eit"]
      to:
        - operation:
            ports: ["6379","6380"]
